# rust-serializers-comparison

./: Cargo.toml  README.md
benches/: message.rs  serialization_benchmark.rs  trallocator.rs
src/: main.rs
src/proto/: message.proto
