[package]
name = "rust-serializers-comparison"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3"
bcs = "0.1"
protobuf = "3.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = {version = "1.5", features = ["derive"] }
criterion = "0.5"
# jemalloc-sys = {version = "0.5", features = ["stats"]}
# jemallocator = "0.5"
# libc = "0.2"
# lazy_static = "1.5"

[dev-dependencies]
serde_derive = "1.0"


[[bench]]
name = "serialization_benchmark"
harness = false